Prepare for update jhipster!

--- a/backend/src/main/resources/i18n/messages_en.properties
+++ b/backend/src/main/resources/i18n/messages_en.properties
@@ -191,6 +191,9 @@ sessions.table.ipaddress  = IP address
 sessions.table.useragent  = User Agent
 sessions.title            = Active sessions for [<b>{{username}}</b>]
 
+speaker.create = Create a new Speaker
+speaker.title  = Speaker
+
 tracker.table.ipaddress = IP Address
 tracker.table.page      = Current page
 tracker.table.time      = Time
