--- a/backend/src/main/resources/i18n/messages_pt.properties
+++ b/backend/src/main/resources/i18n/messages_pt.properties
@@ -191,6 +191,9 @@ sessions.table.ipaddress  = IP
 sessions.table.useragent  = Agente
 sessions.title            = Sess\u00F5es ativas para [<b>{{username}}</b>]
 
+speaker.create = Criar um novo Palestrante
+speaker.title  = Palestrante
+
 tracker.table.ipaddress = IP
 tracker.table.page      = P\u00E1gina atual
 tracker.table.time      = Tempo
